Agregando métodos loadedPage y leavedPage - Generalizando #dl-menu > .dl-menu

--- a/css/component.css
+++ b/css/component.css
@@ -44,7 +44,7 @@ html, body { height: 100%; }
 
 /* Text Styles, Colors, Backgrounds */
 
-.pt-page h1 {
+/*.pt-page h1 {
 	position: absolute;
 	font-weight: 300;
 	font-size: 4.4em;
@@ -95,11 +95,11 @@ html, body { height: 100%; }
 
 .pt-page-6 {
 	background: #f68dbb;
-}
+}*/
 
 /* Triggers (menu and button) */
 
-.pt-triggers {
+/*.pt-triggers {
 	position: absolute;
 	width: 300px;
 	z-index: 999999;
@@ -155,9 +155,9 @@ html, body { height: 100%; }
 
 .touch .pt-triggers .dl-menuwrapper {
 	display: none;
-}
+}*/
 
-.pt-message {
+./*pt-message {
 	display: none;
 	position: absolute;
 	z-index: 99999;
@@ -177,9 +177,9 @@ html, body { height: 100%; }
 
 .no-cssanimations .pt-message {
 	display: block;
-}
+}*/
 
-@media screen and (max-width: 47.4375em) {
+/*@media screen and (max-width: 47.4375em) {
 	.pt-page h1 {
 		font-size: 3em;
 	}
@@ -203,4 +203,4 @@ html, body { height: 100%; }
 	.pt-triggers .dl-menuwrapper {
 		display: none;
 	}
-}
+}*/
