Corrección código comentado

--- a/css/component.css
+++ b/css/component.css
@@ -157,7 +157,7 @@ html, body { height: 100%; }
 	display: none;
 }*/
 
-./*pt-message {
+/*.pt-message {
 	display: none;
 	position: absolute;
 	z-index: 99999;
